<resources>
    <string name="app_name">NaviguationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="user_name_hello">Hello %s</string>
    <string name="email">Email : %s</string>

    <string name="action_settings">Settings</string>
    <string name="home_welcome_msg">Welcome to %s</string>
    <string name="title_activity_service_time">ServiceTimeActivity</string>

    <string name="remaining_time">00 : %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_driving_school">Ajouter une auto-école</string>
    <string name="home_navbar">Home</string>
    <string name="driving_navbar">Driving</string>
    <string name="driving_form_navbar">Driving Form</string>
    <string name="network_navbar">Network</string>
    <string name="settings_navbar">Settings</string>
    <string name="products_navbar">Products</string>
    <string name="communicate_navbar">Communicate</string>
    <string name="share_navbar">Share</string>
    <string name="send_navbar">Send</string>

</resources>
