<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_navbar" />
        <item
            android:id="@+id/nav_driving"
            android:title="@string/driving_navbar" />
        <item
            android:id="@+id/nav_driving_form"
            android:title="@string/driving_form_navbar" />
        <item
            android:id="@+id/nav_network"
            android:title="@string/network_navbar"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings_navbar" />
        <item
            android:id="@+id/nav_products"
            android:title="@string/products_navbar"
            />
    </group>

    <item android:title="@string/communicate_navbar">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_navbar" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_navbar" />
        </menu>
    </item>

</menu>


